* Fixed ObjectRange bug that caused it to exit the cached loop early when it encountered a 0 value. [jddalton]

* unit test: Ensure Enumerable tests against Enumerable methods and not Array methods. [jddalton]

* Make Array#each/Enumerable#each pass the object it's acting on as the third argument of the callback. [kangax]

* Remove Array#each alais of Array#forEach to avoid potential use of forEach's "thisArg" parameter. [Prototype LH #554] [jddalton, kangax, Yaffle]

* Cleanup unit test fixtures and source files. [jddalton]

* Add Object._each() and Object.each() to correctly handle for-in loops. [Rails Trac #11584] [jddalton, kangax, Tobie Langel]

* Make Object.keys() and Object.values() conform to the ECMA 3.1 draft. [jddalton]

* Add Object.isOwnProperty() to aid in detecting "own" vs. "inherited" properties. [Rails Trac #9700, #11043] [Prototype LH #243] [FuseJS LH #8] [arandes, Ben, grey, jddalton]

* Remove the "&_=" Safari 2 ajax bug workaround for the http PUT method. [Rails Trac #2258] [Prototype LH #327] [jddalton, Mark van Eijk, Shane Vitarana]
  Fixed in Rails by changeset http://dev.rubyonrails.org/changeset/2106.

* Stop Element#show clearing display values when called before Element#hide. [Prototype LH #177] [jddalton, quamis]

* Stop Element#getHeight/Element#getWidth from setting an element's position to "absolute" because it causes shrink-wrapping. [Prototype LH #313] [datamagi, jddalton]

* Remove uneeded $R() and $H() calls so ObjectRange and Hash can be optional. [FuseJS LH #14] [jddalton]

* Change to initial Fuse namespace. [FuseJS LH #1] [jddalton]
  Note: Backwards compatibility warning.
   - Exposed Fuse.Browser.Bug() and Fuse.Browser.Feature()
   - Moved browser user agent sniffs to Fuse.Browser.Agent
   - Removed Fuse.BrowserFeatures

* Rename internal method "mergeList" to "concatList" to better express its functionality. [jddalton]

* Updates to Array API [FuseJS LH #15] [Prototype LH #356] [jddalton, Joe Gornick, quamis]